Version 0.3.2
 General:
  - Added basic faction description
  - Updated some text for the initial Perturba quest

 Balance:
  - Cyllel Farchog Array:
     * flux per shot 75 -> 65
  - Estoc
     * slightly improved engine performance: should have less issues firing its bombs now


Version 0.3.1c
 Bugfixes:
  - Removed crash error that sometimes appear when entering the refit screen


Version 0.3.1b
 General
  - Made Vass fleets no longer try and extort Remnant and Derelict fleetsm because that's silly
  - Made the Combat Carrier Curtana variant slightly less shit
  - Fixed minor spelling errors

 Bugfixes:
  - Hopefully made WIP fighters not spawn in prism freeport
  - Fixed spelling error causing the initial Perturba quest to never appear
  

Version 0.3.1a
 General:
  - Fixed color for design types
  - Changed color for weapon covers
  - Made initial bar quest twice as likely to appear
  - Added a pair of randomized missions that feature normal Vass fleets rather than Perturba Elites
  - Changed mission icons (still pretty much placeholder, though)
  - Added some minor forward-compatibility improvements

 Balance:
  - Colada Emitter: 
     * tripled shots/burst (this was just bugged, really)

 Bugfixes:
  - The Perturba initial quest can now appear on any player market if they have ship-production capabilities, not just the market WITH ship production


Version 0.3.1 : Time for a small update
 General:
  - Added most missing descriptions

 Balance:
  - Dyrnwyn blaster: 
     * flux per shot 70 -> 80
     * Damage per shot 65 -> 80
  - Cyllel Farchog Array:
     * flux per shot 65 -> 75
     * Damage per shot 65 -> 80
  - Yawarakai-Te:
     * Damage/sec 140 -> 170
     * Range 350 -> 400 ["effective" range of 250 unchanged: this is to give Perturba Elites more use of their +150 effective range]
  - Caladbolg Bombard:
     * Accuracy slightly improved

 Bugfixes:
  - The Perturba initial quest no longer freezes by doing certain dialogue actions