@@ -1,0 +1,3 @@
+id
+# anything in the ship or weapon blacklists is also automatically blacklisted here
+vass_general_blueprint
