@@ -1,0 +1,8 @@
+id
+vass_makhaira
+vass_schiavona
+vass_curtana
+vass_estoc
+vass_estoc_torpor
+vass_katzbalger
+vass_katzbalger_accel
