@@ -9,7 +9,7 @@ Yawarakai-Te,vass_yawarakai_te,3,0.3,780,350,170,,,0,0,6,,,,OTHER,,100,0.2,0.2,,
 Caladbolg Bombard,vass_caladbolg,3,0.3,2900,800,,600,,40,11,13,,,,HIGH_EXPLOSIVE,700,,0,2.6,1,,0,3,1,0.4,,800,,,50,,"he12, vass_general_blueprint",,Recipro Tech,,Assault,,,,,"Can only have a single shot active at a given time.",,,,,
 ,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,
 #built_in,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,
-Colada Emitter,vass_colada,5,,0,800,,300,225,1,45,5,36,0.18,3,FRAGMENTATION,75,,0,10,3,0.3,12,12,0,0,,750,750,1.3,50,,,"SYSTEM, SHOW_IN_CODEX",,,Perturba Tech,,Assault,Fast,None,,,"Disturbs nearby space-time once the projectile destabilizes.",,,,,
+Colada Emitter,vass_colada,5,,0,800,,300,225,1,45,5,36,0.18,3,FRAGMENTATION,75,,0,10,3,0.3,12,12,0,0,,750,750,1.3,50,"SYSTEM, SHOW_IN_CODEX",,,Perturba Tech,,Assault,,Fast,None,,,,"Disturbs nearby space-time once the projectile destabilizes.",,,,,
 Excalibur Emitter,vass_excalibur_launcher,5,,0,800,,1000,750,1,50,0,3,,,FRAGMENTATION,0,,0,7,1,,0,0,0,0,,250,100,6,200,"SYSTEM, SHOW_IN_CODEX, GUIDED_POOR",,,Perturba Tech,,Strike,Fast,None,,,"Disturbs nearby space-time once the projectile destabilizes.",,,,,
 ,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,
 #deco,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,,
